unpackaged/main/default/objects/TestObjecttttt__c/TestObjecttttt__c.object-meta.xml
<CustomObject>
    <label>TestObjecttttt</label>
    <nameField>
        <label>TestObjecttttt Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TestObjecttttts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>