unpackaged/main/default/objects/TestObjecttttt__c/fields/dollaBills__c.field-meta.xml
<CustomField>
    <fullName>dollaBills__c</fullName>
    <label>dollaBills</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>