unpackaged/main/default/objects/TestObjecttttt__c/fields/newfiled10__c.field-meta.xml
<CustomField>
    <fullName>newfiled10__c</fullName>
    <defaultValue>false</defaultValue>
    <label>newfiled10</label>
    <type>Checkbox</type>
</CustomField>