unpackaged/main/default/objects/TestObjecttttt__c/fields/newfiled11__c.field-meta.xml
<CustomField>
    <fullName>newfiled11__c</fullName>
    <defaultValue>false</defaultValue>
    <label>newfiled11</label>
    <type>Checkbox</type>
</CustomField>