unpackaged/main/default/objects/TestObjecttttt__c/fields/newfiled12__c.field-meta.xml
<CustomField>
    <fullName>newfiled12__c</fullName>
    <defaultValue>false</defaultValue>
    <label>newfiled12</label>
    <type>Checkbox</type>
</CustomField>